<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin"
            android:text="@string/Introductoryline"
            android:textSize="24sp"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:id="@+id/first_quiz"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/layout_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="none"
                    android:background="#F44336"
                    android:text="@string/firstQuiz" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_android"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/Androidstudio" />

                    <RadioButton
                        android:id="@+id/radio_Xcode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Xcode" />
                </RadioGroup>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/second_quiz"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/layout_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#F44336"
                    android:text="@string/secondquiz" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_linear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/Linear" />

                    <RadioButton
                        android:id="@+id/radio_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/Vertical" />

                    <RadioButton
                        android:id="@+id/radio_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/Horizontal" />
                </RadioGroup>


            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/third_quiz"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/layout_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#F44336"
                    android:text="@string/third_quiz" />

                <EditText
                    android:id="@+id/edittext_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:hint="Give your answer" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/fourth_quiz"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/layout_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#F44336"
                    android:text="@string/fourthquiz" />

                <CheckBox
                    android:id="@+id/vertical_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/vertical" />

                <CheckBox
                    android:id="@+id/relative_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/Relative" />

                <CheckBox
                    android:id="@+id/horizontal_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/horizontal_orientation" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/fifth_quiz"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/layout_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#F44336"
                    android:text="@string/fifthquestion" />

                <CheckBox
                    android:id="@+id/textstyle_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/textstyle" />

                <CheckBox
                    android:id="@+id/textvisibility_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/textvisibility" />

                <CheckBox
                    android:id="@+id/orientation_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/orientation" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:background="#F44336"
            android:onClick="submitAnswers"
            android:text="@string/Submit_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:background="#F44336"
            android:onClick="retryTest"
            android:text="@string/Reset_btn" />
    </LinearLayout>
</ScrollView>


